# sports-deals-scraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily.yml  weekly.yml
configs/: sources.example.yaml  sources.yaml
src/: cli.py  database.py  deduplicator.py  models.py  newsletter.py  ranker.py
src/collectors/: __init__.py  academy.py  adidas.py  base.py  big5.py  dicks.py  monkey_sports.py  nike.py  scheels.py  soccer_com.py
src/utils/: __init__.py  parsing.py  scoring.py  validation.py
templates/newsletter/: category_section.html  category_section.md  deal_card.html  deal_card.md  footer.html  footer.md  header.html  header.md  newsletter.html  newsletter.md  sport_section.html  sport_section.md  summary.html  summary.md
tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_parsing.py  test_scoring.py
tests/fixtures/: sample_json_ld.json  sample_listing.html  sample_product.html
